--- a/apps/quiz/templates/tasks/cq0_main_base.html
+++ b/apps/quiz/templates/tasks/cq0_main_base.html
@@ -53,7 +53,7 @@
     <main class="fullheight">
         {% block header %}
             <div id="header_container">
-                <div class="grid_10" id="header_left">
+                <div class="grid_8" id="header_left">
                     <h1>Code<span class="color1">Quiz</span> <span id="css_version">{{SETTINGS_VERSION}}</span></h1>
                 </div>
                 <div class="grid_6" id="header_right">
@@ -73,7 +73,7 @@
 
         <div id="main_container">
             {% block main %}
-                <div class="grid_12" style="position: relative;">
+                <div class="grid_14" style="position: relative;">
                     {% block main_left %}
 
                         Main content
@@ -82,13 +82,15 @@
                 </div>
 
                 <!-- End of main_left -->
+                <div class="clear"></div>
 
                 <div class="grid_4">
                     {% block main_right %}
-                        content of right column
+                        <!-- content of meta area -->
                     {% endblock %}
                 </div>
                 <div class="clear"></div>
+
 
                 <!-- End of main_right -->
             {% endblock %}
