--- a/apps/quiz/templates/tasks/cq2_cbox.html
+++ b/apps/quiz/templates/tasks/cq2_cbox.html
@@ -1,33 +1,31 @@
-<!-- ==> start: cq2_cbox.html -->
+        <!-- ==> start: cq2_cbox.html -->
 
-<div class="grid_4 alpha">
-    <div style="margin-left:-110px;text-align: right; width:100px; float: left">
-        {{ question_counter }}.
-    </div>
+        <div class="grid_col_s1">
+            <div style="margin-left:-110px;text-align: right; width:100px; float: left">
+                {{ question_counter }}.
+            </div>
 
-    {% if text_slots.0.type == "source" %}
-        <pre class="source">{{ text_slots.0.content }}</pre>
-    {% else %}
-        <span class="normal">{{ text_slots.0.content|safe }}</span>
-    {% endif %}
-</div>
+            {% if text_slots.0.type == "source" %}
+                <pre class="source">{{ text_slots.0.content }}</pre>
+            {% else %}
+                <span class="normal">{{ text_slots.0.content|safe }}</span>
+            {% endif %}
+        </div>
 
-<div class="input_field grid_4{% if not print_feedback %} suffix_4 omega{% endif %}{% if not text_slots.0.content %} pull_4{% endif %}">
-    <input name="answer_{{ idx }}" type="checkbox" {% if user_solution == "on" %} checked="checked" {% endif %}>
-</div>
+        <div class="input_field">
+            <input name="answer_{{ idx }}" type="checkbox" {% if user_solution == "on" %} checked="checked" {% endif %}>
+        </div>
 
-{% if print_feedback %}
-    <div class="grid_4 omega{% if not text_slots.0.content %} pull_4{% endif %}">
-        {% if print_solution %}
-            <pre class="{{ css_class }}">{{ printed_solution }}</pre>
-        {% else %}
-            <span style="color: red">
-                <i class="fa {% if css_class == 'sol_wrong' %}fa-times{% else %}fa-thumbs-o-up{% endif %} {{ css_class }}"></i>
-            </span>
+        {% if print_feedback %}
+            <div class="">
+                {% if print_solution %}
+                    <pre class="{{ css_class }}">{{ printed_solution }}</pre>
+                {% else %}
+                    <span style="color: red">
+                        <i class="fa {% if css_class == 'sol_wrong' %}fa-times{% else %}fa-thumbs-o-up{% endif %} {{ css_class }}"></i>
+                    </span>
+                {% endif %}
+            </div>
         {% endif %}
-    </div>
-{% endif %}
-<div class="clear"></div>
-
-<!-- ==> end: cq2_cbox.html -->
+        <!-- ==> end: cq2_cbox.html -->
 
