--- a/apps/quiz/templates/tasks/txt.html
+++ b/apps/quiz/templates/tasks/txt.html
@@ -1,5 +1,5 @@
         <!-- ==> start: txt.html -->
-        <div class="grid_col_1_4 {% if comment %} comment {% endif %}" style="padding: 0.5em 0px">
+        <div class="grid_col_1_4 normal_txt {% if comment %} comment {% endif %}" style="padding: 0.5em 0px">
 
             {{ text|safe }}
 
