--- a/apps/quiz/templates/tasks/cq2_cbox.html
+++ b/apps/quiz/templates/tasks/cq2_cbox.html
@@ -8,7 +8,7 @@
             {% if text_slots.0.type == "source" %}
                 <pre class="source">{{ text_slots.0.content }}</pre>
             {% else %}
-                <span class="normal">{{ text_slots.0.content|safe }}</span>
+                <span class="normal_subtask">{{ text_slots.0.content|safe }}</span>
             {% endif %}
         </div>
 
